[package]
name = "vulkemon"
version = "0.1.0"
authors = ["Nathan Braswell <miloignis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glsl-to-spirv = "0.1"
image = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"

[dependencies.wgpu]
git = "https://github.com/gfx-rs/wgpu-rs"
features = ["vulkan"]
